New features (Added Login and fixed bugs)

--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -86,8 +86,7 @@
         <!-- footer -->
         <!-- ============================================================== -->
         <footer class="footer text-center">
-            All Rights Reserved by Adminpro Admin. Designed and Developed by
-            <a href="https://www.wrappixel.com">WrapPixel</a>.
+            All Rights Reserved by ICA. Designed and Developed by <a href="#">ISL</a>.
         </footer>
         <!-- ============================================================== -->
         <!-- End footer -->
