--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card bg-white shadow-sm text-center">
+            <img class="card-img-top img-responsive" src="assets/images/pictures/bg_1_1.jpg" alt="Image constructor" />
+            <div class="card-body">
+                <h3 class="card-title mb-3 mt-1">¡Bienvenido a ICA!</h3>
+                <p class="card-text">
+                    ICA es una herramienta que pone a su disposición a un experto en construcción las 24 horas del día, 
+                    los 7 días de la semana, listo para brindarte recomendaciones precisas y personalizadas para tu proyecto de 
+                    construcción. Con nuestra avanzada tecnología de inteligencia artificial respaldada por modelos de aprendizaje 
+                    automático, te ofrecemos una guía inteligente para convertir tus sueños de construcción en realidad. 
+                    
+                    <!--
+                    Simplemente describe lo que deseas construir, y nuestra aplicación analizará una vasta base de datos de proyectos 
+                    similares para proporcionarte recomendaciones prácticas y efectivas. Construir nunca ha sido tan fácil y seguro. Comienza 
+                    hoy mismo con ICA y da vida a tus proyectos de construcción con confianza.
+                    -->
+                </p>
+                <!-- <a href="javascript:void(0)" class="btn btn-primary">Read More</a> -->
+            </div>
+        </div>
+    </div>
+</div>
