--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -3,7 +3,7 @@
 <!-- ============================================================== -->
 <ul class="navbar-nav float-start me-auto">
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/dashboard"> Starter </a>
+    <a class="nav-link waves-effect waves-dark" href="/home"> Starter </a>
   </li>
   <li class="nav-item">
     <a class="nav-link waves-effect waves-dark" href="/about"> About </a>
@@ -52,16 +52,15 @@
         class="rounded-circle"
         width="31"
       />
-      <span class="ms-2">Steve Jobs</span>
+      <span class="ms-2">Nayelly Rosas</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
-      <a class="dropdown-item" href="javascript:void(0)"> My Balance</a>
-      <a class="dropdown-item" href="javascript:void(0)"> Inbox</a>
+      <a class="dropdown-item" href="javascript:void(0)"> Mi Perfil</a>
+      <a class="dropdown-item" href="javascript:void(0)"> Notificaciones</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
+      <a class="dropdown-item" href="javascript:void(0)"> Configuración</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Logout</a>
+      <a class="dropdown-item" href="javascript:void(0)"> Salir</a>
     </div>
   </li>
   <!-- ============================================================== -->
