New features (advisor added)

--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -1,1 +1,27 @@
-<p>advisor works!</p>
+  <div class="m-3">
+    <div class="row row-cols-1 row-cols-md-3 gx-5 gy-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="card text-bg-dark bg-white shadow rounded">
+                <img src="assets/images/pictures/opc_1.jpg" class="card-img img-fluid" alt="..." style="opacity: 0.6;">
+                <div class="card-img-overlay">
+                    <h4 class="card-title text-dark">Pisos</h4>
+                    <p class="card-text h4 text-dark">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="card text-bg-dark bg-white shadow rounded">
+                <img src="assets/images/pictures/opc_2.jpg" class="card-img img-fluid" alt="..." style="opacity: 0.6;">
+                <div class="card-img-overlay">
+                    <h4 class="card-title text-dark">Losas</h4>
+                    <p class="card-text h4 text-dark">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
