New features added (Login and home)

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,11 +1,11 @@
 <div class="my-bg-gradient">
 <!-- <div class="bg-image"> -->
-    <div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class=" m-0 row vh-100 justify-content-center align-items-center">
         <div *ngIf="loginDiv" class="col-md-3 col-xs-4 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
             <div class="form-signin w-100 m-auto d-flex flex-column">
                 <form>
-                    <img class="mb-4" src="assets/images/logos/logo-text.png" alt="">
-                    <h1 class="h3 mb-3 fw-normal">Por favor, inicie sesión</h1>
+                    <img class="mb-4" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
+                    <h1 class="h3 mb-3 fw-normal text-center">Iniciar Sesión</h1>
 
                     <div class="form-floating">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -36,8 +36,8 @@
         <div *ngIf="requestDiv" class="col-md-3 col-xs-4 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
             <div class="form-signin w-100 m-auto d-flex flex-column" >
                 <form>
-                    <img class="mb-4" src="assets/images/logos/logo-text.png" alt="">
-                    <h1 class="h3 mb-3 fw-normal text-center">Gracias por contactarnos</h1>
+                    <img class="mb-4" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
+                    <!-- <h1 class="h3 mb-3 fw-normal text-center">Gracias por contactarnos</h1> -->
                     <div class="text-center mb-3">
                         <span class="h6">
                             Para tener acceso a nuestro sitio llene el siguiente formulario y 
