--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,38 @@
 <div class="row">
     <div class="col-12">
         <div class="card bg-white shadow-sm text-center">
-            <img class="card-img-top img-responsive" src="assets/images/pictures/bg_1_1.jpg" alt="Image constructor" />
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="assets/images/pictures/bg_1_1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3000">
+                    <img src="assets/images/pictures/bg_2_1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3000">
+                    <img src="assets/images/pictures/bg_3_1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <!-- <img class="card-img-top img-responsive" src="assets/images/pictures/bg_1_1.jpg" alt="Image constructor" /> -->
             <div class="card-body">
                 <h3 class="card-title mb-3 mt-1">¡Bienvenido a ICA!</h3>
                 <p class="card-text">
-                    ICA es una herramienta que pone a su disposición a un experto en construcción las 24 horas del día, 
-                    los 7 días de la semana, listo para brindarte recomendaciones precisas y personalizadas para tu proyecto de 
-                    construcción. Con nuestra avanzada tecnología de inteligencia artificial respaldada por modelos de aprendizaje 
-                    automático, te ofrecemos una guía inteligente para convertir tus sueños de construcción en realidad. 
-                    
+                    ICA es una herramienta que pone a su disposición a un experto en construcción las 24 horas del día,
+                    los 7 días de la semana, listo para brindarte recomendaciones precisas y personalizadas para tu
+                    proyecto de
+                    construcción. Con nuestra avanzada tecnología de inteligencia artificial respaldada por modelos de
+                    aprendizaje
+                    automático, te ofrecemos una guía inteligente para convertir tus sueños de construcción en realidad.
+
                     <!--
                     Simplemente describe lo que deseas construir, y nuestra aplicación analizará una vasta base de datos de proyectos 
                     similares para proporcionarte recomendaciones prácticas y efectivas. Construir nunca ha sido tan fácil y seguro. Comienza 
