--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -18,18 +18,18 @@
                 <!-- ============================================================== -->
                 <!-- Logo -->
                 <!-- ============================================================== -->
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand justify-content-center border-bottom" href="/home">
                     <!-- Logo icon -->
-                    <b class="logo-icon">
+                    <!-- <b class="logo-icon"> -->
                         <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                         <!-- Light Logo icon -->
-                        <img src="assets/images/logos/logo-icon.png" alt="homepage" class="dark-logo" />
-                    </b>
+                        <!-- <img src="assets/images/logos/logo-icon.png" alt="homepage" class="dark-logo" />
+                    </b> -->
                     <!--End Logo icon -->
                     <!-- Logo text -->
                     <span class="logo-text">
                         <!-- Light Logo text -->
-                        <img src="assets/images/logos/logo-text.png" class="dark-logo" alt="homepage" />
+                        <img src="assets/images/logos/ica_logo_light_2.jpg" class="dark-logo" height="50" alt="homepage" />
                     </span>
                 </a>
                 <!-- ============================================================== -->
@@ -57,7 +57,7 @@
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <aside class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
+    <aside class="left-sidebar vh-100" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
         <app-sidebar></app-sidebar>
     </aside>
     <!-- ============================================================== -->
