--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -1,69 +1,58 @@
 <!-- ============================================================== -->
 <!-- toggle and nav items -->
 <!-- ============================================================== -->
-<ul class="navbar-nav float-start me-auto">
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/home"> Starter </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/about"> About </a>
-  </li>
-  <!-- ============================================================== -->
-  <!-- create new -->
-  <!-- ============================================================== -->
-  <li class="nav-item d-none d-md-block" ngbDropdown placement="bottom-end">
-    <a
-      ngbDropdownToggle
-      class="nav-link waves-effect waves-dark"
-      href="javascript:void(0)"
-      data-toggle="dropdown"
-      aria-haspopup="true"
-      aria-expanded="false"
-    >
-      <span>Create New</span>
-    </a>
-    <div ngbDropdownMenu class="">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Something else here</a>
-    </div>
-  </li>
+<ul class="navbar-nav float-end me-auto">
+    <li class="nav-item">
+        <a class="nav-link waves-effect waves-dark" href="#"> Conócenos </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link waves-effect waves-dark" href="#"> Cursos </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link waves-effect waves-dark" href="#"> Contacto </a>
+    </li>
+    <!-- ============================================================== -->
+    <!-- create new -->
+    <!-- ============================================================== -->
+    <li class="nav-item d-none d-md-block" ngbDropdown placement="bottom-end">
+        <a ngbDropdownToggle class="nav-link waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <span>Ayuda</span>
+        </a>
+        <div ngbDropdownMenu class="">
+            <a class="dropdown-item" href="#">Contacto</a>
+            <!-- <a class="dropdown-item" href="#">Another action</a> -->
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Soporte</a>
+        </div>
+    </li>
 </ul>
 <!-- ============================================================== -->
 <!-- Right side toggle and nav items -->
 <!-- ============================================================== -->
-<ul class="navbar-nav float-end">
-  <!-- ============================================================== -->
-  <!-- User profile and search -->
-  <!-- ============================================================== -->
-  <li class="nav-item" ngbDropdown placement="bottom-end">
-    <a
-      ngbDropdownToggle
-      class="nav-link waves-effect waves-dark pro-pic"
-      href="javascript:void(0)"
-      data-toggle="dropdown"
-      aria-haspopup="true"
-      aria-expanded="false"
-    >
-      <img
-        src="assets/images/users/user1.jpg"
-        alt="user"
-        class="rounded-circle"
-        width="31"
-      />
-      <span class="ms-2">Nayelly Rosas</span>
-    </a>
-    <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)"> Mi Perfil</a>
-      <a class="dropdown-item" href="javascript:void(0)"> Notificaciones</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Configuración</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Salir</a>
-    </div>
-  </li>
-  <!-- ============================================================== -->
-  <!-- User profile and search -->
-  <!-- ============================================================== -->
-</ul>
+<!-- <ul class="navbar-nav float-end"> -->
+    <!-- ============================================================== -->
+    <!-- User profile and search -->
+    <!-- ============================================================== -->
+
+    <!--
+    <li class="nav-item" ngbDropdown placement="bottom-end">
+        <a ngbDropdownToggle class="nav-link waves-effect waves-dark pro-pic" href="javascript:void(0)"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="assets/images/users/user1.jpg" alt="user" class="rounded-circle" width="31" />
+            <span class="ms-2">Nayelly Rosas</span>
+        </a>
+        <div class="dropdown-menu-right" ngbDropdownMenu>
+            <a class="dropdown-item" href="javascript:void(0)"> Mi Perfil</a>
+            <a class="dropdown-item" href="javascript:void(0)"> Notificaciones</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="javascript:void(0)"> Configuración</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="javascript:void(0)"> Salir</a>
+        </div>
+    </li>
+    -->
+    <!-- ============================================================== -->
+    <!-- User profile and search -->
+    <!-- ============================================================== -->
+<!-- </ul> -->
