--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -1,25 +1,114 @@
-  <div class="m-3">
-    <div class="row row-cols-1 row-cols-md-3 gx-5 gy-4">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="card text-bg-dark bg-white shadow rounded">
-                <img src="assets/images/pictures/opc_1.jpg" class="card-img img-fluid" alt="..." style="opacity: 0.6;">
-                <div class="card-img-overlay">
-                    <h4 class="card-title text-dark">Pisos</h4>
-                    <p class="card-text h4 text-dark">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+<div class="mx-4 mt-1">
+    <div class="row mb-2">
+        <div class="col">
+            <div class="card bg-white shadow rounded">
+                <div class="card-body">
+                    <h2 class="h3 text-center mb-2">Construcción</h2>
+                    <div class="card-text mb-3">
+                        Aquí encontrarás los diferentes secciones dedicadas a tareas específicas de construcción, puedes usar el siguiente
+                        cuadro de búsqueda para encontrar facilmente lo que deseas hacer.   
+                    </div>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2 border-bottom border-success" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 gx-4 gy-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="card mb-3 bg-white shadow rounded">
+                <div class="row g-0">
+                    <div class="col-md-6 col-sm-12 col-xs-12 d-flex justify-content-center align-items-center">
+                        <img src="assets/images/pictures/opc_1.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-0">Pisos</h5>
+                            <!-- 
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            -->
+                            <small class="text-body-secondary">
+                                ¿Necesitas construir un piso para tu casa? Este es el lugar indicado.
+                            </small>
+                            <br>
+                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="card text-bg-dark bg-white shadow rounded">
-                <img src="assets/images/pictures/opc_2.jpg" class="card-img img-fluid" alt="..." style="opacity: 0.6;">
-                <div class="card-img-overlay">
-                    <h4 class="card-title text-dark">Losas</h4>
-                    <p class="card-text h4 text-dark">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="card mb-3 bg-white shadow rounded">
+                <div class="row g-0">
+                    <div class="col-md-6 col-sm-12 col-xs-12 d-flex justify-content-center align-items-center">
+                        <img src="assets/images/pictures/opc_2.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-0">Losas</h5>
+                            <!-- 
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            -->
+                            <small class="text-body-secondary">
+                                Una alternativa para el piso de tu patio o de tu jardín.
+                            </small>
+                            <br>
+                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="card mb-3 bg-white shadow rounded">
+                <div class="row g-0">
+                    <div class="col-md-6 col-sm-12 col-xs-12 d-flex justify-content-center align-items-center">
+                        <img src="assets/images/pictures/opc_3.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-0">Techos</h5>
+                            <!-- 
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            -->
+                            <small class="text-body-secondary">
+                                Muy importante para proteger a las personas en el interior del exterior.
+                            </small>
+                            <br>
+                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="card mb-3 bg-white shadow rounded">
+                <div class="row g-0">
+                    <div class="col-md-6 col-sm-12 col-xs-12 d-flex justify-content-center align-items-center">
+                        <img src="assets/images/pictures/opc_4.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-0">Muros</h5>
+                            <!-- 
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                            -->
+                            <small class="text-body-secondary">
+                                ¿Necitas dividir un cuarto? Un muro puede convertir un cuarto en dos.
+                            </small>
+                            <br>
+                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
