New features (Construction added and bugs fixed)

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,10 +1,10 @@
 <div class="my-bg-gradient">
 <!-- <div class="bg-image"> -->
-    <div class=" m-0 row vh-100 justify-content-center align-items-center">
-        <div *ngIf="loginDiv" class="col-md-3 col-xs-4 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
+    <div class="row vh-100 justify-content-center align-items-center mx-3">
+        <div *ngIf="loginDiv" class="col-xs-9 col-sm-7 col-md-6 col-lg-3 col-xl-3 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
             <div class="form-signin w-100 m-auto d-flex flex-column">
                 <form>
-                    <img class="mb-4" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
+                    <img class="mb-4 img-fluid" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
                     <h1 class="h3 mb-3 fw-normal text-center">Iniciar Sesión</h1>
 
                     <div class="form-floating">
@@ -33,10 +33,10 @@
                 </form>
             </div>
         </div>
-        <div *ngIf="requestDiv" class="col-md-3 col-xs-4 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
+        <div *ngIf="requestDiv" class="col-xs-9 col-sm-7 col-md-6 col-lg-3 col-xl-3 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
             <div class="form-signin w-100 m-auto d-flex flex-column" >
                 <form>
-                    <img class="mb-4" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
+                    <img class="mb-4 img-fluid" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
                     <!-- <h1 class="h3 mb-3 fw-normal text-center">Gracias por contactarnos</h1> -->
                     <div class="text-center mb-3">
                         <span class="h6">
