--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,106 @@
-<p>categories works!</p>
+<div class="row px-3 pt-3 mb-2">
+    <div class="col">
+        <div class="card bg-white shadow rounded">
+            <div class="card-body">
+                <h2 class="h2 text-center mb-3">Servicios</h2>
+                <div class="card-text text-center">
+                    Herramienta adecuada para el trabajo adecuado
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="px-3">
+    <div class="row row-cols-1 row-cols-md-3 gx-4 gy-2">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_1.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Construcción</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_2.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Eléctrico</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_3.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Plomería</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_4.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Herrería</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_5.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Pintura</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card shadow rounded">
+                <a class="d-flex justify-content-center align-items-center hover-link" href="/services/construction">
+                    <!-- Start Link -->
+                    <b class="logo-icon">
+                        <img src="assets/images/pictures/services/sv_6.jpg" alt="homepage" class="img-fluid rounded" />
+                        <div class="hover-text">
+                            <h2 class="text-white">Mantenimiento Industrial</h2>
+                        </div>
+                    </b>
+                    <!--End Link -->
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
