--- a/src/app/construction/construction.component.html
+++ b/src/app/construction/construction.component.html
@@ -1,22 +1,23 @@
-<div class="mx-4 mt-1">
-    <div class="row mb-2">
-        <div class="col">
-            <div class="card bg-white shadow rounded">
-                <div class="card-body">
-                    <h2 class="h3 text-center mb-2">Construcción</h2>
-                    <div class="card-text mb-3">
-                        Aquí encontrarás los diferentes secciones dedicadas a tareas específicas de construcción, puedes usar el siguiente
-                        cuadro de búsqueda para encontrar facilmente lo que deseas hacer.   
-                    </div>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 border-bottom border-success" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
+<div class="row px-3 pt-3 mb-2">
+    <div class="col">
+        <div class="card bg-white shadow rounded">
+            <div class="card-body">
+                <h2 class="h2 text-center mb-3">Construcción</h2>
+                <div class="card-text mb-3">
+                    Aquí encontrarás los diferentes secciones dedicadas a tareas específicas de construcción, puedes usar el siguiente
+                    cuadro de búsqueda para encontrar facilmente lo que deseas hacer.   
                 </div>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2 border-bottom border-success" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
             </div>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-3 gx-4 gy-3">
+</div>
+
+<div class="px-3">
+    <div class="row row-cols-1 row-cols-md-3 gx-4 gy-2">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card mb-3 bg-white shadow rounded">
                 <div class="row g-0">
