--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
-<div class="row">
+<div class="row px-3 pt-3">
     <div class="col-12">
-        <div class="card bg-white shadow-sm text-center">
+        <div class="card bg-white shadow-sm text-center rounded">
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="assets/images/pictures/bg_1_1.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/images/pictures/bg_1_1.jpg" class="d-block w-100 rounded-top" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="3000">
-                    <img src="assets/images/pictures/bg_2_1.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/images/pictures/bg_2_1.jpg" class="d-block w-100 rounded-top" alt="...">
                   </div>
                   <div class="carousel-item" data-bs-interval="3000">
-                    <img src="assets/images/pictures/bg_3_1.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/images/pictures/bg_3_1.jpg" class="d-block w-100 rounded-top" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
