--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -57,7 +57,7 @@
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <aside class="left-sidebar vh-100" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
+    <aside class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
         <app-sidebar></app-sidebar>
     </aside>
     <!-- ============================================================== -->
