--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,1 +1,23 @@
 // In this scss you can overwrite all our scss, we suggested you to add your scss into this, so whenever the update comes it will not affect your code.
+
+// In this scss you can overwrite all our scss, we suggested you to add your scss into this, so whenever the update comes it will not affect your code.
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #398bf7 #e3e3e3;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #e3e3e3;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #398bf7;
+    // border-radius: 20px;
+    border: 0px solid #e3e3e3;
+}
