New features added (Floors and Slabs)

--- a/src/app/construction/construction.component.html
+++ b/src/app/construction/construction.component.html
@@ -35,7 +35,7 @@
                                 ¿Necesitas construir un piso para tu casa? Este es el lugar indicado.
                             </small>
                             <br>
-                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                            <a href="/services/construction/floors" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                                 Una alternativa para el piso de tu patio o de tu jardín.
                             </small>
                             <br>
-                            <a href="#" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
+                            <a href="/services/construction/slabs" class="btn btn-primary btn-sm mt-2 mb-0">Comenzar</a>
                         </div>
                     </div>
                 </div>
