--- a/src/app/construction/slabs/slabs.component.html
+++ b/src/app/construction/slabs/slabs.component.html
@@ -1,1 +1,111 @@
-<p>slabs works!</p>
+<div class="row px-3 pt-3">
+    <div class="col">
+        <div class="card shadow bg-white rounded ps-2 pe-3">
+            <div class="card-body">
+                <!-- Título -->
+                <div class="row mb-5">
+                    <div class="col">
+                        <h2 class="h2">Losas</h2>
+                        <span class="">
+                            Completa el siguiente formulario para ofrecerte una solución que se ajuste a tus
+                            necesidades.
+                        </span>
+                    </div>
+                </div>
+
+                <!-- Formulario -->
+                <form>
+                    <!-- Descripción -->
+                    <div class="row mb-3">
+                        <div class="col-xs-12 col-sm-12 col-md-4">
+                            <div class="row">
+                                <div class="col">
+                                    <span class="card-title">1. Descripción del caso:</span>
+                                    <br>
+                                    <span class="card-text">
+                                        Describe de forma breve y concisa el caso que presentas.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-8">
+                            <div class="row border border-black border-2 rounded px-2 py-3">
+                                <div class="col">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <!-- Palabras clave -->
+                    <div class="row mb-3">
+                        <div class="col-xs-12 col-sm-12 col-md-4">
+                            <div class="row">
+                                <div class="col">
+                                    <span class="card-title">2. Palabras clave:</span>
+                                    <br>
+                                    <span class="card-text">
+                                        Selecciona las palabras que más se asocien a tu proyecto
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-8">
+                            <div class="row border border-black border-2 rounded px-2 py-3">
+                                <div class="col-md-3" *ngFor="let opcion of opciones; let i = index">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="opcion{{i}}"
+                                            [value]="opcion" (change)="toggleOpcion(opcion)"
+                                            [checked]="opcionesSeleccionadas.includes(opcion)" />
+                                        <label class="form-check-label" for="opcion{{i}}">
+                                            {{ opcion }}
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <!-- Categoría -->
+                    <div class="row mb-3">
+                        <div class="col-xs-12 col-sm-12 col-md-4">
+                            <div class="row">
+                                <div class="col">
+                                    <span class="card-title">3. Categoría:</span>
+                                    <br>
+                                    <span class="card-text">
+                                        Selecciona la categoría que más se relacione con el tipo de losa a construir.
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-8">
+                            <div class="row border border-black border-2 rounded px-2 py-3">
+                                <div class="col">
+                                    <select class="form-select mb-3" aria-label="Large select example">
+                                        <option selected disabled>Seleccione una categoría...</option>
+                                        <option value="1">Concreto</option>
+                                        <option value="2">Nervada</option>
+                                        <option value="3">Losacero</option>
+                                        <option value="4">Placa Fácil</option>
+                                        <option value="5">Prefabricada</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-5 mb-3">
+                        <div class="d-flex justify-content-between">
+                            <div class="col-md-2 text-start">
+                                <a href="/services/construction" class="btn btn-info btn-lg w-100">Regresar</a>
+                            </div>
+                            <div class="col-md-2 text-end">
+                                <button type="submit" class="btn btn-success btn-lg w-100">Enviar</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
