--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,16 +3,18 @@
     <div class="row vh-100 justify-content-center align-items-center mx-3">
         <div *ngIf="loginDiv" class="col-xs-9 col-sm-7 col-md-6 col-lg-3 col-xl-3 p-5 shadow-sm border rounded-3 bg-white" [@fadeInOut]>
             <div class="form-signin w-100 m-auto d-flex flex-column">
-                <form>
+                <form (ngSubmit)="login()">
                     <img class="mb-4 img-fluid" src="assets/images/logos/ica_logo_light_2.jpg" height="75" alt="">
                     <h1 class="h3 mb-3 fw-normal text-center">Iniciar Sesión</h1>
 
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"
+                        [(ngModel)]="credentials.username" name="username">
                         <label for="floatingInput">Correo</label>
                     </div>
                     <div class="form-floating">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+                        [(ngModel)]="credentials.password" name="password">
                         <label for="floatingPassword">Contraseña</label>
                     </div>
 
@@ -22,7 +24,7 @@
                             Recuérdame
                         </label>
                     </div>
-                    <button class="btn btn-info w-100 py-2" (click)="login()">Entrar</button>
+                    <button class="btn btn-info w-100 py-2">Entrar</button>
                     <div class="text-center mt-2">
                         <a href="javascript:void(0);" class="text-decoration-underline link-info link-offset-2 link-underline-opacity-100 link-underline-opacity-100-hover"
                             (click)="toggleDiv()"
