--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,1 +1,133 @@
-<p>requests works!</p>
+<div class="row px-3 pt-3">
+    <div class="col">
+        <div class="card shadow rounded">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h2 class="h2 mb-3">Lista de solicitudes</h2>
+                        <div class="card-text">
+                            En esta sección encontrarás todas las solicitudes de acceso a la plataforme de usuarios no
+                            registrados;
+                            como Administrador, puedes aceptar o negar dicha solicitud. Para aceptar una solicitud, es
+                            necesario hacer
+                            click sobre el botón [Aceptar]. Esto mostrará una ventana donde asignará el rol y la
+                            contraseña de usuario.
+                            Finalmente, pulse sobre el botón [Guardar] para aplicar los cambios y automáticamente, se
+                            enviará al correo
+                            del usuario aceptado la contraseña asignada.
+                        </div>
+                    </div>
+                </div>
+
+                <div *ngIf="loading" class="text-center pt-5 mt-5">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+                <div class="row py-3">
+                    <div class="col" *ngIf="requests.length > 0; else noUsersTemplate">
+                        <div class="row mb-2">
+                            <div class="col">
+                                <input [(ngModel)]="searchText" class="form-control bg-white border-dark"
+                                    placeholder="Filtrar...">
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead class="table-dark">
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Correo</th>
+                                        <th>Nombre</th>
+                                        <th>Fecha</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr
+                                        *ngFor="let request of requests | filter: searchText | paginate: { itemsPerPage: 10, currentPage: p }; index as i">
+                                        <td class="align-middle">{{ i + 1 }}</td>
+                                        <td class="align-middle">{{ request.email }}</td>
+                                        <td class="align-middle">{{ request.name }} {{ request.last_name }}</td>
+                                        <td class="align-middle">{{ request.request_date | date: 'dd-MM-yyyy' }}</td>
+                                        <td class="align-middle">
+                                            <button *ngIf="request.status === '0'" type="button"
+                                                class="btn btn-info py-1 px-2" (click)="newUserModal(content, request)">
+                                                <i class="bi bi-person-vcard-fill me-2"></i>Aceptar
+                                            </button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="text-end mt-2">
+                            <pagination-controls previousLabel="Anterior" nextLabel="Siguiente"
+                                (pageChange)="p = $event">
+                            </pagination-controls>
+                        </div>
+                    </div>
+
+                    <ng-template #noUsersTemplate>
+                        <div class="row py-5 my-5">
+                            <div class="col text-center">
+                                <img src="assets/images/errors/nothing-found.png" class="img-fluid mb-4"
+                                    style="width: 125px" alt=":/">
+                                <h4>No hay solicitudes por mostrar</h4>
+                            </div>
+                        </div>
+                    </ng-template>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Ventana modal para agregar nuevo usuario -->
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-content p-2">
+        <div class="modal-header bg-info">
+            <h4 class="modal-title text-white fw-semibold" id="modal-basic-title">Aceptar solicitud de nuevo usuario</h4>
+            <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+            <!-- Formulario para agregar nuevo usuario -->
+            <form (ngSubmit)="addNewUser()">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control border border-dark" id="email" [(ngModel)]="newUser.email" name="email" required disabled>
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nombre(s)</label>
+                    <input type="text" class="form-control border border-dark" id="name" [(ngModel)]="newUser.name" name="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="last_name" class="form-label">Apellidos</label>
+                    <input type="text" class="form-control border border-dark" id="last_name" [(ngModel)]="newUser.last_name" name="last_name" required>
+                </div>
+                <div class="row">
+                    <div class="col-md-7 col-12 mb-3">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control border border-dark" id="password" [(ngModel)]="newUser.password" name="password" required>
+                            <button class="btn btn-outline-success" type="button" id="button-addon2" (click)="generatePassword()">Generar</button>
+                        </div>
+                        <span class="small" *ngIf="passGenerated !== ''">Contraseña generada: {{ passGenerated }}</span>
+                    </div>
+                    <div class="col-md-5 col-12">
+                        <label for="role" class="form-label">Rol</label>
+                        <div class="">
+                            <select class="form-select border border-dark" id="role" [(ngModel)]="newUser.role" name="role" required>
+                                <option value="user" selected>Básico</option>
+                                <option value="admin">Admin</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-end">
+                    <button type="submit" class="btn btn-primary"><i class="bi bi-floppy2-fill me-2"></i>Guardar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</ng-template>
