--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row px-3 pt-3">
     <div class="col-12">
-        <div class="card bg-white shadow-sm text-center rounded">
+        <div class="card bg-white shadow text-center rounded">
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="3000">
