--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,55 @@
-<p>profile works!</p>
+<div class="row px-3 pt-3">
+    <div class="col">
+        <div class="card shadow rounded bg-white">
+            <div class="card-body">
+                <form>
+                    <div class="row">
+                        <div class="col-12 col-md-2 mb-3">
+                            <img src="assets/images/users/user1.jpg" alt="profile_pic" class="rounded border" style="width: 100%;">
+                            <br>
+                            <button class="btn btn-outline-info mt-3 mt-md-2 w-100">Cambiar foto</button>
+                        </div>
+                        <div class="col-12 col-md-10">
+                            <div class="row">
+                                <div class="col">
+                                    <h2 class="h2 mb-3">
+                                        Mi Perfil <span *ngIf="user.rol === 'admin'" class="">(Admin)</span>
+                                    </h2>
+                                    <div class="card-text mb-4">
+                                        En esta sección encontrarás toda tu información, puedes actualizar tu información si es necesario.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 col-md-3 mb-3">
+                                    <label for="name" class="form-label">Nombre(s)</label>
+                                    <input type="text" [(ngModel)]="user.nombre" class="form-control" name="name" id="name" required>
+                                </div>
+                                <div class="col-12 col-md-3 mb-3">
+                                    <label for="last_name" class="form-label">Apellidos</label>
+                                    <input type="text" [(ngModel)]="user.apellidos" class="form-control" name="last_name" id="last_name" required>
+                                </div> 
+                                <div class="col-12 col-md-3 mb-3">
+                                    <label for="phone" class="form-label">Teléfono</label>
+                                    <input type="text" [(ngModel)]="user.telefono" class="form-control" name="phone" id="phone" required>
+                                </div> 
+                                <div class="col-12 col-md-3 mb-3">
+                                    <label for="email" class="form-label">Correo</label>
+                                    <input type="email" [(ngModel)]="user.correo" class="form-control" name="email" id="email" disabled required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 col-md-9"></div>
+                                <div class="col-12 col-md-3 d-flex align-items-end mt-sm-2">
+                                    <button class="btn btn-primary w-100">
+                                        <i class="bi bi-floppy2-fill me-2"></i>Guardar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
