--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,6 +1,6 @@
 <div class="row px-3 pt-3">
     <div class="col">
-        <div class="card shadow rounded">
+        <div class="card shadow rounded bg-white">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
@@ -68,7 +68,7 @@
                     </div>
 
                     <ng-template #noUsersTemplate>
-                        <div class="row py-5 my-5">
+                        <div *ngIf="!loading" class="row py-5 my-5">
                             <div class="col text-center">
                                 <img src="assets/images/errors/nothing-found.png" class="img-fluid mb-4"
                                     style="width: 125px" alt=":/">
@@ -124,7 +124,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-end">
+                <div class="d-flex justify-content-end align-items-center mt-3">
+                    <div *ngIf="loading2" class="spinner-border me-2" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div> 
                     <button type="submit" class="btn btn-primary"><i class="bi bi-floppy2-fill me-2"></i>Guardar</button>
                 </div>
             </form>
