New features added (Results example)

--- a/src/app/construction/floors/floors.component.html
+++ b/src/app/construction/floors/floors.component.html
@@ -134,7 +134,8 @@
                                 <a href="/services/construction" class="btn btn-info btn-lg w-100">Regresar</a>
                             </div>
                             <div class="col-md-2 text-end">
-                                <button type="submit" class="btn btn-success btn-lg w-100">Enviar</button>
+                                <a class="btn btn-success btn-lg w-100" href="/services/results">Enviar</a>
+                                <!-- <button type="submit" class="btn btn-success btn-lg w-100" (click)="get_results()">Enviar</button> -->
                             </div>
                         </div>
                     </div>
